[project]
name = "logit-lens-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.3",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "torch>=2.10.0",
    "transformer-lens>=2.17.0",
    "tuned-lens>=0.2.0",
]
